Change the structure of the locale json.

--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -1,5 +1,4 @@
 {
-	"$schema": "../$schema.json#",
 	"keywords": {
 		"tag": "タグ",
 		"tag name": "タグ名",
@@ -33,36 +32,38 @@
 		"the html specification": "HTMLの仕様",
 		"settings": "設定"
 	},
-	"{0} is {1}": "{0}は{1}です",
-	"The {0} {1} is {2}": "{0}{1}は{2}です",
-	"Required {0}": "{0}が必要です",
-	"Required {0} on {1}": "{1}には{0}が必要です",
-	"Not required {0}": "{0}は不要です",
-	"Not required {0} on {1}": "{1}には{0}は不要です",
-	"Duplicate {0}": "{0}が重複しています",
-	"Missing the {0} {1}": "{0}{1}が見つかりません",
-	"Duplicate the {0} {1}": "{0}{1}が重複しています",
-	"{0} is must {1} on {2}": "{0}は{2}で{1}べきです",
-	"{0} must {1}": "{0}は{1}するべきです",
-	"{0} should {1}": "{0}は{1}してください",
-	"{0} must be {1}": "{0}は{1}にするべきです",
-	"{0} should be {1}": "{0}は{1}にしてください",
-	"{0} of {1} must be {2}": "{1}の{0}は{2}にするべきです",
-	"{0} of {1} should be {2}": "{1}の{0}は{2}にしてください",
-	"Never {0}": "{0}しないでください",
-	"Insert {0}": "{0}を入れてください",
-	"Never {0} {1}": "{1}を{0}しないでください",
-	"Values allowed for {0} attributes are {$}": "{0}属性に許可される値は{$}です",
-	"{0} width spaces": "{0}幅スペース",
-	"Always insert {0} before {1} of {2}": "{2}の{1}の前には{0}を入れてください",
-	"Never insert {0} before {1} of {2}": "{2}の{1}の前には{0}を入れないでください",
-	"Always insert {0} after {1} of {2}": "{2}の{1}の後には{0}を入れてください",
-	"Never insert {0} after {1} of {2}": "{2}の{1}の後には{0}を入れないでください",
-	"{0} {1} is unmatched patterns ({2})": "{1}{0}は次のパターンにマッチしませんでした {2}",
-	"Should increase indentation": "インデントを深くしてください",
-	"Should decrease indentation": "インデントを浅くしてください",
-	"Start tag and end tag indentation should align": "開始タグと終了タグのインデントを揃えてください",
-	"Should have a unique label because {0} landmarks were markup more than once on a page": "{0}ランドマークが複数回マークアップされているため一意のラベルが必要です",
-	"The {0} element must be descendant of the {1} element": "{0}要素は{1}要素の子孫でなければなりません",
-	"Invalid content of the {0} element in {1}": "{1}において{0}要素の内容が不正です"
+	"sentences": {
+		"{0} is {1}": "{0}は{1}です",
+		"The {0} {1} is {2}": "{0}{1}は{2}です",
+		"Required {0}": "{0}が必要です",
+		"Required {0} on {1}": "{1}には{0}が必要です",
+		"Not required {0}": "{0}は不要です",
+		"Not required {0} on {1}": "{1}には{0}は不要です",
+		"Duplicate {0}": "{0}が重複しています",
+		"Missing the {0} {1}": "{0}{1}が見つかりません",
+		"Duplicate the {0} {1}": "{0}{1}が重複しています",
+		"{0} is must {1} on {2}": "{0}は{2}で{1}べきです",
+		"{0} must {1}": "{0}は{1}するべきです",
+		"{0} should {1}": "{0}は{1}してください",
+		"{0} must be {1}": "{0}は{1}にするべきです",
+		"{0} should be {1}": "{0}は{1}にしてください",
+		"{0} of {1} must be {2}": "{1}の{0}は{2}にするべきです",
+		"{0} of {1} should be {2}": "{1}の{0}は{2}にしてください",
+		"Never {0}": "{0}しないでください",
+		"Insert {0}": "{0}を入れてください",
+		"Never {0} {1}": "{1}を{0}しないでください",
+		"Values allowed for {0} attributes are {$}": "{0}属性に許可される値は{$}です",
+		"{0} width spaces": "{0}幅スペース",
+		"Always insert {0} before {1} of {2}": "{2}の{1}の前には{0}を入れてください",
+		"Never insert {0} before {1} of {2}": "{2}の{1}の前には{0}を入れないでください",
+		"Always insert {0} after {1} of {2}": "{2}の{1}の後には{0}を入れてください",
+		"Never insert {0} after {1} of {2}": "{2}の{1}の後には{0}を入れないでください",
+		"{0} {1} is unmatched patterns ({2})": "{1}{0}は次のパターンにマッチしませんでした {2}",
+		"Should increase indentation": "インデントを深くしてください",
+		"Should decrease indentation": "インデントを浅くしてください",
+		"Start tag and end tag indentation should align": "開始タグと終了タグのインデントを揃えてください",
+		"Should have a unique label because {0} landmarks were markup more than once on a page": "{0}ランドマークが複数回マークアップされているため一意のラベルが必要です",
+		"The {0} element must be descendant of the {1} element": "{0}要素は{1}要素の子孫でなければなりません",
+		"Invalid content of the {0} element in {1}": "{1}において{0}要素の内容が不正です"
+	}
 }
