--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -40,37 +40,45 @@
 				"settings": { "type": "string" }
 			}
 		},
-		"{0} is {1}": { "type": "string" },
-		"The {0} {1} is {2}": { "type": "string" },
-		"Required {0}": { "type": "string" },
-		"Required {0} on {1}": { "type": "string" },
-		"Not required {0}": { "type": "string" },
-		"Not required {0} on {1}": { "type": "string" },
-		"Duplicate {0}": { "type": "string" },
-		"Missing the {0} {1}": { "type": "string" },
-		"Duplicate the {0} {1}": { "type": "string" },
-		"{0} is must {1} on {2}": { "type": "string" },
-		"{0} must {1}": { "type": "string" },
-		"{0} should {1}": { "type": "string" },
-		"{0} must be {1}": { "type": "string" },
-		"{0} should be {1}": { "type": "string" },
-		"{0} of {1} must be {2}": { "type": "string" },
-		"{0} of {1} should be {2}": { "type": "string" },
-		"Never {0}": { "type": "string" },
-		"Insert {0}": { "type": "string" },
-		"Never {0} {1}": { "type": "string" },
-		"Values allowed for {0} attributes are {$}": { "type": "string" },
-		"{0} width spaces": { "type": "string" },
-		"Always insert {0} before {1} of {2}": { "type": "string" },
-		"Never insert {0} before {1} of {2}": { "type": "string" },
-		"Always insert {0} after {1} of {2}": { "type": "string" },
-		"Never insert {0} after {1} of {2}": { "type": "string" },
-		"{0} {1} is unmatched patterns ({2})": { "type": "string" },
-		"Should increase indentation": { "type": "string" },
-		"Should decrease indentation": { "type": "string" },
-		"Start tag and end tag indentation should align": { "type": "string" },
-		"Should have a unique label because {0} landmarks were markup more than once on a page": { "type": "string" },
-		"The {0} element must be descendant of the {1} element": { "type": "string" },
-		"Invalid content of the {0} element in {1}": { "type": "string" }
+		"sentences": {
+			"type": "object",
+			"additionalProperties": false,
+			"properties": {
+				"{0} is {1}": { "type": "string" },
+				"The {0} {1} is {2}": { "type": "string" },
+				"Required {0}": { "type": "string" },
+				"Required {0} on {1}": { "type": "string" },
+				"Not required {0}": { "type": "string" },
+				"Not required {0} on {1}": { "type": "string" },
+				"Duplicate {0}": { "type": "string" },
+				"Missing the {0} {1}": { "type": "string" },
+				"Duplicate the {0} {1}": { "type": "string" },
+				"{0} is must {1} on {2}": { "type": "string" },
+				"{0} must {1}": { "type": "string" },
+				"{0} should {1}": { "type": "string" },
+				"{0} must be {1}": { "type": "string" },
+				"{0} should be {1}": { "type": "string" },
+				"{0} of {1} must be {2}": { "type": "string" },
+				"{0} of {1} should be {2}": { "type": "string" },
+				"Never {0}": { "type": "string" },
+				"Insert {0}": { "type": "string" },
+				"Never {0} {1}": { "type": "string" },
+				"Values allowed for {0} attributes are {$}": { "type": "string" },
+				"{0} width spaces": { "type": "string" },
+				"Always insert {0} before {1} of {2}": { "type": "string" },
+				"Never insert {0} before {1} of {2}": { "type": "string" },
+				"Always insert {0} after {1} of {2}": { "type": "string" },
+				"Never insert {0} after {1} of {2}": { "type": "string" },
+				"{0} {1} is unmatched patterns ({2})": { "type": "string" },
+				"Should increase indentation": { "type": "string" },
+				"Should decrease indentation": { "type": "string" },
+				"Start tag and end tag indentation should align": { "type": "string" },
+				"Should have a unique label because {0} landmarks were markup more than once on a page": {
+					"type": "string"
+				},
+				"The {0} element must be descendant of the {1} element": { "type": "string" },
+				"Invalid content of the {0} element in {1}": { "type": "string" }
+			}
+		}
 	}
 }
