Fix the message of the attr-duplication rule.

--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -29,6 +29,8 @@
 				"c:deprecated": { "type": "string" },
 				"obsolete": { "type": "string" },
 				"c:obsolete": { "type": "string" },
+				"duplicated": { "type": "string" },
+				"c:duplicated": { "type": "string" },
 				"indentation": { "type": "string" },
 				"tab": { "type": "string" },
 				"space": { "type": "string" },
@@ -46,6 +48,7 @@
 			"type": "object",
 			"additionalProperties": false,
 			"properties": {
+				"the {0}": { "type": "string" },
 				"{0} is {1}": { "type": "string" },
 				"{0} is {1:c}": { "type": "string" },
 				"The {0} {1} is {2}": { "type": "string" },
@@ -53,7 +56,6 @@
 				"Required {0} on {1}": { "type": "string" },
 				"Not required {0}": { "type": "string" },
 				"Not required {0} on {1}": { "type": "string" },
-				"Duplicate {0}": { "type": "string" },
 				"Missing the {0} {1}": { "type": "string" },
 				"Duplicate the {0} {1}": { "type": "string" },
 				"{0} is must {1} on {2}": { "type": "string" },
