--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -22,6 +22,8 @@
 		"c:deprecated": "は非推奨です",
 		"obsolete": "廃止ずみ",
 		"c:obsolete": "は廃止されています",
+		"duplicated": "重複",
+		"c:duplicated": "は重複しています",
 		"indentation": "インデント",
 		"tab": "タブ",
 		"space": "スペース",
@@ -35,6 +37,7 @@
 		"settings": "設定"
 	},
 	"sentences": {
+		"the {0}": "その{0}",
 		"{0} is {1}": "{0}は{1}です",
 		"{0} is {1:c}": "{0}{1:c}",
 		"The {0} {1} is {2}": "{0}{1}は{2}です",
@@ -42,7 +45,6 @@
 		"Required {0} on {1}": "{1}には{0}が必要です",
 		"Not required {0}": "{0}は不要です",
 		"Not required {0} on {1}": "{1}には{0}は不要です",
-		"Duplicate {0}": "{0}が重複しています",
 		"Missing the {0} {1}": "{0}{1}が見つかりません",
 		"Duplicate the {0} {1}": "{0}{1}が重複しています",
 		"{0} is must {1} on {2}": "{0}は{2}で{1}べきです",
