Fix the message of the case-sensitive-tag-name rule.

--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -9,6 +9,7 @@
 			"properties": {
 				"tag": { "type": "string" },
 				"tag name": { "type": "string" },
+				"tag names": { "type": "string" },
 				"attribute": { "type": "string" },
 				"attributes": { "type": "string" },
 				"attribute name": { "type": "string" },
