--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -2,6 +2,7 @@
 	"keywords": {
 		"tag": "タグ",
 		"tag name": "タグ名",
+		"tag names": "タグ名",
 		"attribute": "属性",
 		"attributes": "属性",
 		"attribute name": "属性名",
