--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -51,6 +51,7 @@
 			"additionalProperties": false,
 			"properties": {
 				"the {0}": { "type": "string" },
+				"the \"{0}\" {1}": { "type": "string" },
 				"{0} of {1}": { "type": "string" },
 				"{0} is {1}": { "type": "string" },
 				"{0} is {1:c}": { "type": "string" },
@@ -77,7 +78,7 @@
 				"Never insert {0} before {1} of {2}": { "type": "string" },
 				"Always insert {0} after {1} of {2}": { "type": "string" },
 				"Never insert {0} after {1} of {2}": { "type": "string" },
-				"{0} {1} is unmatched patterns ({2})": { "type": "string" },
+				"{0} is unmatched with the below patterns: {1}": { "type": "string" },
 				"Should increase indentation": { "type": "string" },
 				"Should decrease indentation": { "type": "string" },
 				"Start tag and end tag indentation should align": { "type": "string" },
