Fix the message of the deprecated-element rule.

--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -33,6 +33,8 @@
 				"c:obsolete": { "type": "string" },
 				"duplicated": { "type": "string" },
 				"c:duplicated": { "type": "string" },
+				"non-standard": { "type": "string" },
+				"c:non-standard": { "type": "string" },
 				"indentation": { "type": "string" },
 				"tab": { "type": "string" },
 				"space": { "type": "string" },
