Fix the message of the doctype rule.

--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -57,7 +57,7 @@
 				"{0} of {1}": { "type": "string" },
 				"{0} is {1}": { "type": "string" },
 				"{0} is {1:c}": { "type": "string" },
-				"Required {0}": { "type": "string" },
+				"Require {0}": { "type": "string" },
 				"Required {0} on {1}": { "type": "string" },
 				"Not required {0}": { "type": "string" },
 				"Not required {0} on {1}": { "type": "string" },
