--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -46,7 +46,7 @@
 		"{0} of {1}": "{1}の{0}",
 		"{0} is {1}": "{0}は{1}です",
 		"{0} is {1:c}": "{0}{1:c}",
-		"Required {0}": "{0}が必要です",
+		"Require {0}": "{0}が必要です",
 		"Required {0} on {1}": "{1}には{0}が必要です",
 		"Not required {0}": "{0}は不要です",
 		"Not required {0} on {1}": "{1}には{0}は不要です",
