--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -8,7 +8,7 @@
 		"attribute name": "属性名",
 		"attribute names": "属性名",
 		"attribute value": "属性値",
-		"attribute id value": "id属性の値",
+		"value": "値",
 		"element": "要素",
 		"html elements": "HTML要素",
 		"class name": "クラス名",
@@ -27,7 +27,7 @@
 		"non-standard": "非標準",
 		"c:non-standard": "は非標準です",
 		"duplicated": "重複",
-		"c:duplicated": "は重複しています",
+		"c:duplicated": "が重複しています",
 		"indentation": "インデント",
 		"tab": "タブ",
 		"space": "スペース",
