--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -1,4 +1,9 @@
 {
+	"listFormat": {
+		"quoteStart": "「",
+		"quoteEnd": "」",
+		"separator": ""
+	},
 	"keywords": {
 		"tag": "タグ",
 		"tag name": "タグ名",
