--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -33,6 +33,16 @@
 		"c:non-standard": "は非標準です",
 		"duplicated": "重複",
 		"c:duplicated": "が重複しています",
+		"disallow": "未許可",
+		"c:disallow": "は許可されていません",
+		"empty string": "空文字",
+		"zero": "ゼロ",
+		"one": "1",
+		"integer": "整数",
+		"non-negative integer": "正の整数",
+		"floating-point number": "浮動小数点数",
+		"angle": "角度",
+		"alpha channel value": "不透明度",
 		"indentation": "インデント",
 		"tab": "タブ",
 		"space": "スペース",
@@ -41,39 +51,60 @@
 		"equal sign": "等号",
 		"doctype": "文書型",
 		"obsolete doctype": "廃止された文書型",
+		"hash-name reference": "ハッシュ名参照",
 		"top level": "トップレベル",
 		"the html specification": "HTMLの仕様",
-		"settings": "設定"
+		"settings": "設定",
+		". ": "。"
 	},
 	"sentences": {
 		"the {0}": "その{0}",
 		"the \"{0}\" {1}": "{1}「{0}」",
 		"{0} of {1}": "{1}の{0}",
+		"{0:c} and {1:c}": "{0}且つ、{1}",
+		"either {0}": "{0}のいずれか",
+		"{0} greater than {1}": "{1}より大きい{0}",
+		"less than {0}": "{0}未満",
+		"less than or equal to {0}": "{0}以下",
+		"in the range between {0} and {1}": "{0}から{1}の範囲",
+		"valid {0}": "妥当な{0}",
+		"{0} as {1}": "{1}として{0}",
+		"{0} to {1}": "{0}から{1}",
 		"{0} is {1}": "{0}は{1}です",
 		"{0} is {1:c}": "{0}{1:c}",
+		"{0} must {1}": "{0}は{1}するべきです",
+		"{0} should {1}": "{0}は{1}したほうがよいです",
+		"{0} must be {1}": "{0}は{1}にするべきです",
+		"{0} should be {1}": "{0}は{1}にしたほうがよいです",
+		"{0} must not {1}": "{0}は{1}するべきではありません",
+		"{0} should not {1}": "{0}は{1}しないほうがよいです",
+		"{0} must not be {1}": "{0}は{1}にするべきではありません",
+		"{0} should not be {1}": "{0}は{1}にしないほうがよいです",
+		"{0} expects {1}": "{0}には{1}が必要です",
+		"{0} expects {1:c}": "{0}は{1}である必要があります",
+		"{0} behaves the same as {1} if {2}": "{0}は{2}の場合、{1}と同じ振る舞いをします",
 		"Require {0}": "{0}が必要です",
+		"Never {0} {1}": "{1}を{0}しないでください",
+		"{0} is unmatched with the below patterns: {1}": "{0}は次のパターンにマッチしませんでした {1}",
+
+		"____": "____",
+		"Did you mean \"{0}\"?": "「{0}」ですか？",
 		"Required {0} on {1}": "{1}には{0}が必要です",
 		"Not required {0}": "{0}は不要です",
 		"Not required {0} on {1}": "{1}には{0}は不要です",
 		"Missing the {0} {1}": "{0}{1}が見つかりません",
 		"Duplicate the {0} {1}": "{0}{1}が重複しています",
 		"{0} is must {1} on {2}": "{0}は{2}で{1}べきです",
-		"{0} must {1}": "{0}は{1}するべきです",
-		"{0} should {1}": "{0}は{1}してください",
-		"{0} must be {1}": "{0}は{1}にするべきです",
-		"{0} should be {1}": "{0}は{1}にしてください",
 		"{0} of {1} must be {2}": "{1}の{0}は{2}にするべきです",
 		"{0} of {1} should be {2}": "{1}の{0}は{2}にしてください",
 		"Never {0}": "{0}しないでください",
 		"Insert {0}": "{0}を入れてください",
-		"Never {0} {1}": "{1}を{0}しないでください",
 		"Values allowed for {0} attributes are {$}": "{0}属性に許可される値は{$}です",
 		"{0} width spaces": "{0}幅スペース",
 		"Always insert {0} before {1} of {2}": "{2}の{1}の前には{0}を入れてください",
 		"Never insert {0} before {1} of {2}": "{2}の{1}の前には{0}を入れないでください",
 		"Always insert {0} after {1} of {2}": "{2}の{1}の後には{0}を入れてください",
 		"Never insert {0} after {1} of {2}": "{2}の{1}の後には{0}を入れないでください",
-		"{0} is unmatched with the below patterns: {1}": "{0}は次のパターンにマッチしませんでした {1}",
 		"Should increase indentation": "インデントを深くしてください",
 		"Should decrease indentation": "インデントを浅くしてください",
 		"Start tag and end tag indentation should align": "開始タグと終了タグのインデントを揃えてください",
