--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -17,6 +17,8 @@
 		"element": "要素",
 		"html elements": "HTML要素",
 		"class name": "クラス名",
+		"role": "ロール",
+		"accessible name": "アクセシブルな名前",
 		"quote": "囲う",
 		"double quotation mark": "ダブルクオーテーション",
 		"single quotation mark": "シングルクォーテーション",
@@ -68,6 +70,7 @@
 		"less than or equal to {0}": "{0}以下",
 		"in the range between {0} and {1}": "{0}から{1}の範囲",
 		"valid {0}": "妥当な{0}",
+		"unique {0}": "一意の{0}",
 		"{0} as {1}": "{1}として{0}",
 		"{0} to {1}": "{0}から{1}",
 		"{0} is {1}": "{0}は{1}です",
@@ -108,7 +111,6 @@
 		"Should increase indentation": "インデントを深くしてください",
 		"Should decrease indentation": "インデントを浅くしてください",
 		"Start tag and end tag indentation should align": "開始タグと終了タグのインデントを揃えてください",
-		"Should have a unique label because {0} landmarks were markup more than once on a page": "{0}ランドマークが複数回マークアップされているため一意のラベルが必要です",
 		"The {0} element must be descendant of the {1} element": "{0}要素は{1}要素の子孫でなければなりません",
 		"Invalid content of the {0} element in {1}": "{1}において{0}要素の内容が不正です"
 	}
