Fix the message of the permitted-contents rule.

--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -17,6 +17,9 @@
 		"element": "要素",
 		"html elements": "HTML要素",
 		"class name": "クラス名",
+		"content": "内容",
+		"contents": "内容",
+		"descendant": "子孫",
 		"role": "ロール",
 		"accessible name": "アクセシブルな名前",
 		"quote": "囲う",
@@ -37,6 +40,8 @@
 		"c:duplicated": "が重複しています",
 		"disallow": "未許可",
 		"c:disallow": "は許可されていません",
+		"invalid": "不正",
+		"c:invalid": "は妥当ではありません",
 		"empty string": "空文字",
 		"zero": "ゼロ",
 		"one": "1",
@@ -56,6 +61,7 @@
 		"hash-name reference": "ハッシュ名参照",
 		"top level": "トップレベル",
 		"the html specification": "HTMLの仕様",
+		"the svg specification": "SVGの仕様",
 		"settings": "設定",
 		". ": "。"
 	},
@@ -88,6 +94,7 @@
 		"{0} behaves the same as {1} if {2}": "{0}は{2}の場合、{1}と同じ振る舞いをします",
 		"Require {0}": "{0}が必要です",
 		"Never {0} {1}": "{1}を{0}しないでください",
+		"{0} according to {1}": "{1}において、{0}",
 		"{0} is unmatched with the below patterns: {1}": "{0}は次のパターンにマッチしませんでした {1}",
 
 		"____": "____",
