Fix the message of the wai-aria rule.

--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -14,6 +14,7 @@
 		"attribute names": "属性名",
 		"attribute value": "属性値",
 		"value": "値",
+		"default value": "デフォルト値",
 		"element": "要素",
 		"html elements": "HTML要素",
 		"class name": "クラス名",
@@ -21,6 +22,11 @@
 		"contents": "内容",
 		"descendant": "子孫",
 		"role": "ロール",
+		"the abstract role": "抽象ロール",
+		"the implicit role": "暗黙のロール",
+		"aria state/property": "ARIAステート/プロパティ",
+		"global state/property": "グローバルステート/プロパティ",
+		"semantics": "セマンティクス",
 		"accessible name": "アクセシブルな名前",
 		"quote": "囲う",
 		"double quotation mark": "ダブルクオーテーション",
@@ -62,12 +68,17 @@
 		"top level": "トップレベル",
 		"the html specification": "HTMLの仕様",
 		"the svg specification": "SVGの仕様",
+		"the wai-aria specification": "WAI-ARIAの仕様",
+		"aria in html specification": "ARIA in HTMLの仕様",
 		"settings": "設定",
 		". ": "。"
 	},
 	"sentences": {
 		"the {0}": "その{0}",
+		"the \"{0}\"": "「{0}」",
 		"the \"{0}\" {1}": "{1}「{0}」",
+		"the current \"{0}\" {1}": "現在の{1}「{0}」",
+		"the implicit \"{0}\" {1}": "暗黙の{1}「{0}」",
 		"{0} of {1}": "{1}の{0}",
 		"{0:c} and {1:c}": "{0}且つ、{1}",
 		"either {0}": "{0}のいずれか",
@@ -78,9 +89,14 @@
 		"valid {0}": "妥当な{0}",
 		"unique {0}": "一意の{0}",
 		"{0} as {1}": "{1}として{0}",
+		"the same {0} as {1}": "{1}と同等の{0}",
 		"{0} to {1}": "{0}から{1}",
+		"{0} or {1}": "{0}もしくは{1}",
 		"{0} is {1}": "{0}は{1}です",
 		"{0} is {1:c}": "{0}{1:c}",
+		"{0} is not {1}": "{0}は{1}ではありません",
+		"It is {0}": "{0}です",
+		"It is {0:c}": "{0:c}",
 		"{0} must {1}": "{0}は{1}するべきです",
 		"{0} should {1}": "{0}は{1}したほうがよいです",
 		"{0} must be {1}": "{0}は{1}にするべきです",
@@ -91,11 +107,18 @@
 		"{0} should not be {1}": "{0}は{1}にしないほうがよいです",
 		"{0} expects {1}": "{0}には{1}が必要です",
 		"{0} expects {1:c}": "{0}は{1}である必要があります",
+		"{0} has {1}": "{0}は{1}を持っています",
 		"{0} behaves the same as {1} if {2}": "{0}は{2}の場合、{1}と同じ振る舞いをします",
+		"{0} does not exist": "{0}は存在しません",
+		"{0} contradicts {1}": "{0}は{1}と矛盾しています",
 		"Require {0}": "{0}が必要です",
 		"Never {0} {1}": "{1}を{0}しないでください",
+		"Cannot overwrite {0}": "{0}を上書きすることはできません",
+		"Cannot overwrite {0} to {1}": "{0}を{1}に上書きすることはできません",
+		"{0:c} on {1}": "{1}では、{0:c}",
 		"{0} according to {1}": "{1}において、{0}",
 		"{0} is unmatched with the below patterns: {1}": "{0}は次のパターンにマッチしませんでした {1}",
+		"Arrowed values are: {0}": "許可されている値は次のとおりです {0}",
 
 		"____": "____",
 		"Did you mean \"{0}\"?": "「{0}」ですか？",
