--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -44,8 +44,8 @@
 		"c:non-standard": "は非標準です",
 		"duplicated": "重複",
 		"c:duplicated": "が重複しています",
-		"disallow": "未許可",
-		"c:disallow": "は許可されていません",
+		"disallowed": "未許可",
+		"c:disallowed": "は許可されていません",
 		"invalid": "不正",
 		"c:invalid": "は妥当ではありません",
 		"empty string": "空文字",
