Update locales dictionary and the schema.

--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -20,33 +20,29 @@
 				"tag": { "type": "string" },
 				"tag name": { "type": "string" },
 				"tag names": { "type": "string" },
+				"element": { "type": "string" },
+				"html elements": { "type": "string" },
 				"attribute": { "type": "string" },
 				"attributes": { "type": "string" },
 				"attribute name": { "type": "string" },
 				"attribute names": { "type": "string" },
 				"attribute value": { "type": "string" },
-				"value": { "type": "string" },
-				"element": { "type": "string" },
-				"html elements": { "type": "string" },
 				"class name": { "type": "string" },
-				"quote": { "type": "string" },
-				"double quotation mark": { "type": "string" },
-				"single quotation mark": { "type": "string" },
+				"role": { "type": "string" },
+				"the abstract role": { "type": "string" },
+				"the implicit role": { "type": "string" },
+				"aria state/property": { "type": "string" },
+				"global state/property": { "type": "string" },
+				"value": { "type": "string" },
+				"default value": { "type": "string" },
+				"content": { "type": "string" },
+				"contents": { "type": "string" },
+				"descendant": { "type": "string" },
+				"semantics": { "type": "string" },
+				"accessible name": { "type": "string" },
 				"lowercase": { "type": "string" },
 				"uppercase": { "type": "string" },
 				"illegal characters": { "type": "string" },
-				"escape in character reference": { "type": "string" },
-				"declarate": { "type": "string" },
-				"deprecated": { "type": "string" },
-				"c:deprecated": { "type": "string" },
-				"obsolete": { "type": "string" },
-				"c:obsolete": { "type": "string" },
-				"duplicated": { "type": "string" },
-				"c:duplicated": { "type": "string" },
-				"non-standard": { "type": "string" },
-				"c:non-standard": { "type": "string" },
-				"disallow": { "type": "string" },
-				"c:disallow": { "type": "string" },
 				"empty string": { "type": "string" },
 				"zero": { "type": "string" },
 				"one": { "type": "string" },
@@ -55,18 +51,28 @@
 				"floating-point number": { "type": "string" },
 				"angle": { "type": "string" },
 				"alpha channel value": { "type": "string" },
-				"indentation": { "type": "string" },
-				"tab": { "type": "string" },
-				"space": { "type": "string" },
-				"break line": { "type": "string" },
-				"line break": { "type": "string" },
-				"equal sign": { "type": "string" },
 				"doctype": { "type": "string" },
 				"obsolete doctype": { "type": "string" },
 				"hash-name reference": { "type": "string" },
 				"top level": { "type": "string" },
+				"declarate": { "type": "string" },
 				"the html specification": { "type": "string" },
-				"settings": { "type": "string" },
+				"the svg specification": { "type": "string" },
+				"the wai-aria specification": { "type": "string" },
+				"aria in html specification": { "type": "string" },
+				"deprecated": { "type": "string" },
+				"c:deprecated": { "type": "string" },
+				"obsolete": { "type": "string" },
+				"c:obsolete": { "type": "string" },
+				"non-standard": { "type": "string" },
+				"c:non-standard": { "type": "string" },
+				"duplicated": { "type": "string" },
+				"c:duplicated": { "type": "string" },
+				"disallowed": { "type": "string" },
+				"c:disallowed": { "type": "string" },
+				"invalid": { "type": "string" },
+				"c:invalid": { "type": "string" },
+				"escape in character reference": { "type": "string" },
 				". ": { "type": "string" }
 			}
 		},
@@ -75,42 +81,51 @@
 			"additionalProperties": false,
 			"properties": {
 				"the {0}": { "type": "string" },
+				"the \"{0}\"": { "type": "string" },
 				"the \"{0}\" {1}": { "type": "string" },
+				"the current \"{0}\" {1}": { "type": "string" },
+				"the implicit \"{0}\" {1}": { "type": "string" },
 				"{0} of {1}": { "type": "string" },
+				"{0:c} and {1:c}": { "type": "string" },
+				"either {0}": { "type": "string" },
+				"{0} greater than {1}": { "type": "string" },
+				"less than {0}": { "type": "string" },
+				"less than or equal to {0}": { "type": "string" },
+				"in the range between {0} and {1}": { "type": "string" },
+				"valid {0}": { "type": "string" },
+				"unique {0}": { "type": "string" },
+				"{0} as {1}": { "type": "string" },
+				"the same {0} as {1}": { "type": "string" },
+				"{0} to {1}": { "type": "string" },
+				"{0} or {1}": { "type": "string" },
 				"{0} is {1}": { "type": "string" },
 				"{0} is {1:c}": { "type": "string" },
-				"Require {0}": { "type": "string" },
-				"Did you mean \"{0}\"?": { "type": "string" },
-				"Required {0} on {1}": { "type": "string" },
-				"Not required {0}": { "type": "string" },
-				"Not required {0} on {1}": { "type": "string" },
-				"Missing the {0} {1}": { "type": "string" },
-				"Duplicate the {0} {1}": { "type": "string" },
-				"{0} is must {1} on {2}": { "type": "string" },
+				"{0} is not {1}": { "type": "string" },
+				"It is {0}": { "type": "string" },
+				"It is {0:c}": { "type": "string" },
 				"{0} must {1}": { "type": "string" },
 				"{0} should {1}": { "type": "string" },
 				"{0} must be {1}": { "type": "string" },
 				"{0} should be {1}": { "type": "string" },
-				"{0} of {1} must be {2}": { "type": "string" },
-				"{0} of {1} should be {2}": { "type": "string" },
-				"Never {0}": { "type": "string" },
-				"Insert {0}": { "type": "string" },
+				"{0} must not {1}": { "type": "string" },
+				"{0} should not {1}": { "type": "string" },
+				"{0} must not be {1}": { "type": "string" },
+				"{0} should not be {1}": { "type": "string" },
+				"{0} expects {1}": { "type": "string" },
+				"{0} expects {1:c}": { "type": "string" },
+				"{0} has {1}": { "type": "string" },
+				"{0} behaves the same as {1} if {2}": { "type": "string" },
+				"{0} does not exist": { "type": "string" },
+				"{0} contradicts {1}": { "type": "string" },
+				"Require {0}": { "type": "string" },
 				"Never {0} {1}": { "type": "string" },
-				"Values allowed for {0} attributes are {$}": { "type": "string" },
-				"{0} width spaces": { "type": "string" },
-				"Always insert {0} before {1} of {2}": { "type": "string" },
-				"Never insert {0} before {1} of {2}": { "type": "string" },
-				"Always insert {0} after {1} of {2}": { "type": "string" },
-				"Never insert {0} after {1} of {2}": { "type": "string" },
+				"Cannot overwrite {0}": { "type": "string" },
+				"Cannot overwrite {0} to {1}": { "type": "string" },
+				"{0:c} on {1}": { "type": "string" },
+				"{0} according to {1}": { "type": "string" },
 				"{0} is unmatched with the below patterns: {1}": { "type": "string" },
-				"Should increase indentation": { "type": "string" },
-				"Should decrease indentation": { "type": "string" },
-				"Start tag and end tag indentation should align": { "type": "string" },
-				"Should have a unique label because {0} landmarks were markup more than once on a page": {
-					"type": "string"
-				},
-				"The {0} element must be descendant of the {1} element": { "type": "string" },
-				"Invalid content of the {0} element in {1}": { "type": "string" }
+				"Arrowed values are: {0}": { "type": "string" },
+				"Did you mean \"{0}\"?": { "type": "string" }
 			}
 		}
 	}
