--- a/packages/@markuplint/i18n/locales/en.json
+++ b/packages/@markuplint/i18n/locales/en.json
@@ -1,6 +1,9 @@
 {
 	"keywords": {
 		"html elements": "HTML elements",
-		"the html specification": "the HTML specification"
+		"the html specification": "the HTML specification",
+		"the svg specification": "the SVG specification",
+		"the wai-aria specification": "the WAI-ARIA specification",
+		"aria in html specification": "ARIA in HTML specification"
 	}
 }
