--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -8,34 +8,46 @@
 		"tag": "タグ",
 		"tag name": "タグ名",
 		"tag names": "タグ名",
+		"element": "要素",
+		"html elements": "HTML要素",
 		"attribute": "属性",
 		"attributes": "属性",
 		"attribute name": "属性名",
 		"attribute names": "属性名",
 		"attribute value": "属性値",
-		"value": "値",
-		"default value": "デフォルト値",
-		"element": "要素",
-		"html elements": "HTML要素",
 		"class name": "クラス名",
-		"content": "内容",
-		"contents": "内容",
-		"descendant": "子孫",
 		"role": "ロール",
 		"the abstract role": "抽象ロール",
 		"the implicit role": "暗黙のロール",
 		"aria state/property": "ARIAステート/プロパティ",
 		"global state/property": "グローバルステート/プロパティ",
+		"value": "値",
+		"default value": "デフォルト値",
+		"content": "内容",
+		"contents": "内容",
+		"descendant": "子孫",
 		"semantics": "セマンティクス",
 		"accessible name": "アクセシブルな名前",
-		"quote": "囲う",
-		"double quotation mark": "ダブルクオーテーション",
-		"single quotation mark": "シングルクォーテーション",
 		"lowercase": "小文字",
 		"uppercase": "大文字",
 		"illegal characters": "不正な文字",
-		"escape in character reference": "文字参照でエスケープ",
+		"empty string": "空文字",
+		"zero": "ゼロ",
+		"one": "1",
+		"integer": "整数",
+		"non-negative integer": "正の整数",
+		"floating-point number": "浮動小数点数",
+		"angle": "角度",
+		"alpha channel value": "不透明度",
+		"doctype": "文書型",
+		"obsolete doctype": "廃止された文書型",
+		"hash-name reference": "ハッシュ名参照",
+		"top level": "トップレベル",
 		"declarate": "宣言",
+		"the html specification": "HTMLの仕様",
+		"the svg specification": "SVGの仕様",
+		"the wai-aria specification": "WAI-ARIAの仕様",
+		"aria in html specification": "ARIA in HTMLの仕様",
 		"deprecated": "非推奨",
 		"c:deprecated": "は非推奨です",
 		"obsolete": "廃止ずみ",
@@ -48,29 +60,7 @@
 		"c:disallowed": "は許可されていません",
 		"invalid": "不正",
 		"c:invalid": "は妥当ではありません",
-		"empty string": "空文字",
-		"zero": "ゼロ",
-		"one": "1",
-		"integer": "整数",
-		"non-negative integer": "正の整数",
-		"floating-point number": "浮動小数点数",
-		"angle": "角度",
-		"alpha channel value": "不透明度",
-		"indentation": "インデント",
-		"tab": "タブ",
-		"space": "スペース",
-		"break line": "改行",
-		"line break": "改行",
-		"equal sign": "等号",
-		"doctype": "文書型",
-		"obsolete doctype": "廃止された文書型",
-		"hash-name reference": "ハッシュ名参照",
-		"top level": "トップレベル",
-		"the html specification": "HTMLの仕様",
-		"the svg specification": "SVGの仕様",
-		"the wai-aria specification": "WAI-ARIAの仕様",
-		"aria in html specification": "ARIA in HTMLの仕様",
-		"settings": "設定",
+		"escape in character reference": "文字参照でエスケープ",
 		". ": "。"
 	},
 	"sentences": {
@@ -119,27 +109,6 @@
 		"{0} according to {1}": "{1}において、{0}",
 		"{0} is unmatched with the below patterns: {1}": "{0}は次のパターンにマッチしませんでした {1}",
 		"Arrowed values are: {0}": "許可されている値は次のとおりです {0}",
-
-		"____": "____",
-		"Did you mean \"{0}\"?": "「{0}」ですか？",
-		"Not required {0}": "{0}は不要です",
-		"Not required {0} on {1}": "{1}には{0}は不要です",
-		"Duplicate the {0} {1}": "{0}{1}が重複しています",
-		"{0} is must {1} on {2}": "{0}は{2}で{1}べきです",
-		"{0} of {1} must be {2}": "{1}の{0}は{2}にするべきです",
-		"{0} of {1} should be {2}": "{1}の{0}は{2}にしてください",
-		"Never {0}": "{0}しないでください",
-		"Insert {0}": "{0}を入れてください",
-		"Values allowed for {0} attributes are {$}": "{0}属性に許可される値は{$}です",
-		"{0} width spaces": "{0}幅スペース",
-		"Always insert {0} before {1} of {2}": "{2}の{1}の前には{0}を入れてください",
-		"Never insert {0} before {1} of {2}": "{2}の{1}の前には{0}を入れないでください",
-		"Always insert {0} after {1} of {2}": "{2}の{1}の後には{0}を入れてください",
-		"Never insert {0} after {1} of {2}": "{2}の{1}の後には{0}を入れないでください",
-		"Should increase indentation": "インデントを深くしてください",
-		"Should decrease indentation": "インデントを浅くしてください",
-		"Start tag and end tag indentation should align": "開始タグと終了タグのインデントを揃えてください",
-		"The {0} element must be descendant of the {1} element": "{0}要素は{1}要素の子孫でなければなりません",
-		"Invalid content of the {0} element in {1}": "{1}において{0}要素の内容が不正です"
+		"Did you mean \"{0}\"?": "「{0}」ですか？"
 	}
 }
