--- a/website/src/pages/configuration/index.mdx
+++ b/website/src/pages/configuration/index.mdx
@@ -4,19 +4,23 @@ title: Configuration
 
 ## Configuration file
 
-The configuration file is the rules and/or options that load on markuplint executes. That is usually automatic loading, But you also can load explicitly if use CLI or API.
+The configuration file is the rules and/or options that load on markuplint executes.
+That is usually automatic loading, but you also can load the config expected explicitly using CLI or API.
 
-The automatic loading is recursively searching up from a directory that the target exists. In other words, It is applying that configure files that the closest each the target.
+The automatic loading is recursively searching up from a directory that the target exists.
+In other words, It is applying that configure files that the closest each the target.
 
 ### Format and Filename
 
-You can get even if the filename is not `.markuplintrc`. If you use `.markuplintrc`, You can get even if the format is YAML not JSON.
+You can get even if the filename is not `.markuplintrc`.
 
 The priority applied names are:
 
 -   `markuplint` property in `package.json`
 -   `markuplintrc.json`, `markuplintrc.yaml`, `markuplintrc.yml`, `markuplintrc.js`, or `markuplintrc.cjs`
 -   `markuplint.config.js` or `markuplint.config.cjs`
+
+`.markuplintrc`'s format is JSON and also YAML.
 
 ## Properties
 
@@ -50,7 +54,7 @@ In `extends`, `parser,` and `specs` three, it can set a package name instead of 
 First, it tries to import it as a package.
 If it fails, such as the package doesn't exist, or the strings are not a package, **it resolves strings as just a path**.
 These paths are resolved to absolute paths internally.
-A relative file becomes an absolute path on the base of the config file path being had it.
+A relative path becomes an absolute path on the base of the config file path being had it.
 
 ### `extends`
 
@@ -111,7 +115,7 @@ interface Config {
 -   **Type**: `boolean`
 -   **Default**: `false`
 
-When set true the parser ignores the [Front Matter](https://jekyllrb.com/docs/front-matter/) format part of the source code.
+When set `true` the parser ignores the [Front Matter](https://jekyllrb.com/docs/front-matter/) format part of the source code.
 
 ```html
 ---
@@ -135,7 +139,8 @@ interface Config {
 
 ### `specs`
 
-Set a regex to the key, and the spec file [path](#Specification%20about%20paths) or a package name to the value. The regex should be set it matches the target lintee file (ex. the extension part).
+Set a regex to the key, and the spec file [path](#Specification%20about%20paths) or a package name to the value.
+The regex should be set it matches the target lintee file (ex., the extension part).
 
 ```json
 {
@@ -146,7 +151,8 @@ Set a regex to the key, and the spec file [path](#Specification%20about%20paths)
 }
 ```
 
-Or, Add the spec module path to this array. But this is the format for version `1.x`, so it's **deprecated**.
+Or, You can add those to this array.
+But this is the format for version `1.x`, so it's **deprecated**.
 
 ```json
 {
@@ -206,9 +212,11 @@ And add some rules to this property.
 }
 ```
 
-Basically, Set the boolean to value. If it is the boolean a switching the enabled and the disabled.
-Or set a value given each rule. Those are any string, any number, and an array.
-And if the value is the Object type, it should be this structure like:
+Set a value for each rule.
+Those are any strings, any number, and an array.
+The rule becomes disabled if set false.
+It evaluates as the default value if set true.
+Otherwise, you can set details if you set structure like:
 
 ```json
 {
@@ -225,7 +233,7 @@ And if the value is the Object type, it should be this structure like:
 }
 ```
 
-The detail of Each rule is said from the [Rules page](/rules).
+The details of each rule are said from the [Rules page](/rules).
 
 For example, setting of the rule of `invalid-attr`:
 
@@ -270,7 +278,7 @@ type Rule<T, O> =
 ### `nodeRules`
 
 If you want only any specific element to apply some rule, you can set by this property.
-Be careful the value is an array.
+Be careful to the value is an array.
 You can set the `rules` property of this property like the [`rules`](#rules) property of the root.
 
 ```json
@@ -299,13 +307,13 @@ interface Config {
 }
 ```
 
-The `tagName` allows only element name but allows `"#text"` if it is _the text node_ exceptionally.
+You should set only element name to the `tagName`, but you can set `"#text"` exceptionally when you expect the _text node_.
 
 ### `childNodeRules`
 
-If you want only any specific element and/or scope to apply some rule, you can set by this property.
-If set true to `inheritance` property then _affects all descendant nodes_ of the target element.
-Be careful the value is an array.
+If you want any specific element or its descendants to apply some rule, you can set by this property.
+If set true to the `inheritance` property, _affects all descendant nodes_ of the target element.
+Be careful; **This value is an array**.
 You can set the `rules` property of this property like the [`rules`](#rules) property of the root.
 
 ```json
@@ -326,7 +334,7 @@ You can set the `rules` property of this property like the [`rules`](#rules) pro
 
 Support syntax and operators:
 
-| Selctor Type                                     | Code Example                                                                              | Support |
+| Selector Type                                    | Code Example                                                                              | Support |
 | ------------------------------------------------ | ----------------------------------------------------------------------------------------- | ------- |
 | Universal selector                               | `*`                                                                                       | ✅      |
 | Type selector                                    | `div`                                                                                     | ✅      |
@@ -407,8 +415,8 @@ It is AND condition if combinate.
 ```
 
 You can use the capture of the regular expression.
-It will enable the captures in the rule values as variables of the [Mustache](https://mustache.github.io/) format.
-It will expand the variables as the number that prepended $ mark if the capture is a number.
+It evaluates the [Mustache](https://mustache.github.io/) format in a value of the rules.
+It expands the capturing incremental number prepended $ mark as a variable.
 
 ```json
 {
@@ -429,7 +437,8 @@ It will expand the variables as the number that prepended $ mark if the capture 
 }
 ```
 
-Of course, you can use the named capture group. It will expand the name to a template as a variable.
+Of course, you can use the named capture group.
+It expands the name as a variable.
 
 ```json
 {
@@ -446,7 +455,8 @@ Of course, you can use the named capture group. It will expand the name to a tem
 }
 ```
 
-Note: Recommend using named capture. The numbered capture may conflict.
+Note: Recommend using named capture.
+The numbered capture may conflict and be overwritten.
 
 ```json
 {
@@ -454,7 +464,7 @@ Note: Recommend using named capture. The numbered capture may conflict.
 		{
 			"regexSelector": {
 				"attrName": "/^data-([a-z]+)$/", // It will be `$1`.
-				"attrValue": "^(.+)$" // It will be `$1` too.
+				"attrValue": "^(.+)$" // It will be `$1` too. `$1` is overwritten.
 			},
 			"rules": {
 				"any-rule": "It is {{ $1 }} data attribute, and value is {{ $1 }}"
